--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ jwt.expiration-minutes=120
 
 # Server
 google.client-id=245358983163-o1t9pupvs1oq5u220su2ci1b1v5s3d06.apps.googleusercontent.com
-server.port=8081
+server.port=${PORT:8080}
 
 ##CONFIGURACION ROBOFLOW
 
