cuarto commit del back

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=Arquitecturall_monitoreo
 
 # --- DB Supabase (directo IPv6) ---
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:6543/postgres
-spring.datasource.username=postgres.pvvbvoplyojshsmhlxix
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.kggsuqnkyqcmvqqbifwk
 spring.datasource.password=Ucentral030518*ARQUI
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Pool (Hikari)
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.keepalive-time=300000
+spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.minimum-idle=0
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime=30000
+spring.datasource.hikari.connection-timeout=30000
 
 # JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
